# gpnet-ros

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
config/: tiago_grasping.rviz
launch/: tiago_example.launch
msg/: GPnetGrasp.msg  GraspProposals.msg
scripts/: detection.py  grasp_planning_node.py  model.py  tiago_example.py  utils.py
srv/: GPnetGraspPlanner.srv
